[project]
name = "PythonProjectTemplate_Dietmar_Immenhausen"
version = "0.0.1"
authors = [
  { name="Dietmar Immenhausen", email="dietmar@familie-immenhausen.de" },
]
description = "Python Project Template for new Projects"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dimmenhau/python_project_template"
"Bug Tracker" = "https://github.com/dimmenhau/python_project_template/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
